tests/NormalTests/paczka1/fuzzy1/40821322.err
Error in line 18: exuHsnyS A612 14,2
Error in line 15: A612 S501 59,3
Error in line 23: CfuO S10 94,4
